--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -88,6 +88,7 @@
       
 
       input {
+         font-size: 16px;
         background-color: transparent;
         border-radius: 10px;
         padding: 20px;
@@ -103,6 +104,7 @@
       }
 
       textarea {
+         font-size: 16px;
         background-color: transparent;
         border-radius: 10px;
         padding: 20px;
@@ -118,8 +120,11 @@
       }
 
       button{
+         font-size: 16px;
         border: none;
         background-color: #58f8fc ;
+        color: #120035 !important;
+
         // font-size: 18px;
         font-weight: bold;
         padding: 20px;
