--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -16,7 +16,8 @@
    @include mobile{
     flex-direction: column;
     width: 100%;
-    padding-top: 100px;
+    padding-top: 20%;
+    padding-bottom: 10%;
     
      
       
