--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,12 +1,22 @@
 @import "../../app.scss";
 
+#Home {
+  height: 100vh;
+
+  @include mobile {
+    height: 140vh !important;
+  }
+}
+
 .hero {
   height: calc(100vh - 100px);
+
   background: linear-gradient(180deg, #0c0c1d, #1b235d);
   overflow: hidden;
   position: relative;
-
-  
+  @include mobile {
+    height: 100%;
+  }
 
   .wrapper {
     max-width: 1366px;
@@ -15,60 +25,61 @@
     padding-left: 10%;
     padding-right: 10%;
 
-     @include mobile{
-padding-top:5% ;
-      
-     }
+    @include mobile {
+      height: 50%;
+      // padding-top:5% ;
+    }
 
     .textContainer {
+      z-index: 998;
       width: 60%;
       height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 40px;
+      gap: 30px;
 
+      @include small {
+        padding-top: 40%;
+      }
 
-      @include mobile{
-      height: 50%;
-      width: 100%;
-      gap: 20px;
-      align-items: center;
-      text-align: center;
-      
-
-      
-     }
-
+      @include mobile {
+        height: 50%;
+        width: 100%;
+        gap: 20px;
+        align-items: center;
+        text-align: center;
+        padding-top: 20%;
+      }
 
       h2 {
         font-size: 32px;
         color: #c9bbbd;
         letter-spacing: 10px;
+        @include mobile {
+          margin-top: 5%;
+        }
       }
 
       h1 {
         font-size: 65px;
-         @include mobile{
-      font-size: 32px;
-
-      
-     }
+        @include mobile {
+          font-size: 32px;
+        }
       }
 
       .buttons {
+        z-index: 999;
         display: flex;
         flex-direction: row;
         align-items: center;
         gap: 16px;
-         @include mobile{
-     margin-bottom: 80px;
+        cursor: pointer;
+        @include mobile {
+          margin-bottom: 80px;
+        }
 
-      
-     }
-        
-
-        .btn-1 {
+        a, .btn-1  {
           display: flex;
           align-items: center;
           justify-content: center;
@@ -82,7 +93,7 @@ padding-top:5% ;
           border: none;
           cursor: pointer;
         }
-        .btn-2 {
+        a,.btn-2 {
           display: flex;
           align-items: center;
           justify-content: center;
@@ -101,11 +112,9 @@ padding-top:5% ;
       img {
         width: 50px;
 
-         @include mobile{
-        display: none;
- 
-      
-     }
+        @include mobile {
+          display: none;
+        }
       }
     }
   }
@@ -116,38 +125,40 @@ padding-top:5% ;
     top: 0;
     right: 0px;
 
-     @include mobile{
-      height: 60%;
+    @include small {
+      height: 70% !important;
       width: 100%;
-      top:unset;
+      top: unset;
       bottom: 0;
-// img{
-// width: 100%;
-// height: 100%;
-// object-fit: cover;
-// }
- 
-      
-     }
+    }
+
+    @include mobile {
+      height: 80%;
+      width: 100%;
+      top: unset;
+      bottom: 0;
+      // img{
+      // width: 100%;
+      // height: 100%;
+      // object-fit: cover;
+      // }
+    }
 
     img {
       width: 600px;
 
-       @include mobile{
+      @include mobile {
         width: 100%;
         // height: 200%;
-      
-        object-fit: cover;
 
- 
-      
-     }
+        object-fit: cover;
+      }
     }
   }
-  .slidingText{
+  .slidingText {
     position: absolute;
-    font-size: 50vh; 
-    bottom: -120px  ;
+    font-size: 50vh;
+    bottom: -120px;
     white-space: nowrap;
     color: #ffffff09;
     width: 50%;
@@ -157,14 +168,12 @@ padding-top:5% ;
   .img-gradient {
     width: 600px;
     height: 800px;
-  background: linear-gradient(180deg, #46467734, #1b235d);
-  filter: blur(5px); 
-  // opacity: 0; 
-  animation: fadeIn 2s forwards; 
-
+    background: linear-gradient(180deg, #46467734, #1b235d);
+    filter: blur(5px);
+    // opacity: 0;
+    animation: fadeIn 2s forwards;
   }
 }
-
 
 @keyframes fadeIn {
   to {
