--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -21,6 +21,13 @@
       
      }
 
+      @include large {
+padding-left: 0;
+padding-right: 0;
+
+
+        }
+
 
     span {
       font-weight: bold;
