--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -29,10 +29,20 @@
       height: 50%;
       // padding-top:5% ;
     }
+     @include large {
+padding-left: 0;
+padding-right: 0;
+
+
+
+
+        }
+
+   
 
     .textContainer {
       z-index: 996;
-      width: 60%;
+      width: 55%;
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -64,7 +74,7 @@
       }
 
       h1 {
-        font-size: 65px;
+        font-size: 60px;
         @include mobile {
           font-size: 32px;
         }
@@ -125,7 +135,15 @@
     height: 100%;
     position: absolute;
     top: 0;
-    right: 0px;
+    right: 3%;
+
+     @include large {
+right: 15%;
+top: 10%;
+
+
+
+        }
 
     @include small {
       height: 70% !important;
