--- a/src/components/work/project.scss
+++ b/src/components/work/project.scss
@@ -6,7 +6,7 @@
 
   .progress {
     // background: linear-gradient(180deg,  #1b235d, #0c0c1d);
-      
+     z-index: 999; 
     position: sticky;
     top: 0;
     left: 0;
@@ -64,22 +64,26 @@
 
       .imageContainer {
         flex: 1;
-        height: 50%;
+        // width: 500px;
+          // height: 100%;
+        // height: 500px;
         // width: 100%;
         object-fit: cover;
          @include mobile{
         width: 100%;
-        max-height: 300px;
-         object-fit: none;
+        max-height: 600px;
+         object-fit: cover;
+         position: relative;
       
      }
 
 
         img {
-          flex: 1;
+          // position: absolute;
+          // flex: 1;
           width: 100%;
           height: 100%;
-          // object-fit: cover;
+          object-fit: cover;
           border-radius: 10px;
         }
       }
@@ -90,10 +94,24 @@
         flex-direction: column;
         gap: 24px;
 
+           @include small{
+        transform: none !important;
+        text-align: center;
+        //  padding-bottom: 10%;
+
+      
+     }
          @include mobile{
         transform: none !important;
         text-align: center;
-         padding-bottom: 5%;
+         padding-bottom: 20%;
+      
+     }
+
+      @include large{
+        padding-top: 10%;
+        
+
       
      }
 
@@ -131,6 +149,7 @@
 
            @include mobile{
        align-self: center;
+       
       
      }
           
